crates/wac-parser/tests/parser/fail/future-missing-close.wac
package test:comp;

type bad = future<string;
